@@ -1,0 +1,21 @@
+IF
+Global("SanFouB","LOCALS",0)
+Global("SanFouBH","Global",2)
+InParty("CVSandr")
+AreaType(CITY)
+Delay(12)
+THEN
+RESPONSE #100
+SetGlobal("SanFouB","LOCALS",1)
+END
+
+IF
+Global("SanFouB","LOCALS",1)
+!See([ENEMY])
+!StateCheck(Player1,CD_STATE_NOTVALID)
+!StateCheck("CVSandr",CD_STATE_NOTVALID)
+CombatCounter(0)
+THEN
+RESPONSE #100
+Interact(Player1)
+END
